--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
