--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cra-template": "1.2.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
@@ -19,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
