--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
@@ -25,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^11.0.2",
     "styled-components": "^6.1.13",
