--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "react-to-pdf": "^1.0.1",
+    "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.2",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
