--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://jksolutn.com/",
+  "homepage": "https://jksolutn.com/",
   "dependencies": {
     "@iconify/react": "^5.1.0",
     "@reduxjs/toolkit": "^2.5.0",
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
+    "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
