--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
