--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-spinners": "^0.15.0",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^3.0.5",
